# composer-stats

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
api/src/composer_stats_api/: __init__.py  __main__.py  app.py
api/src/composer_stats_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/src/composer_stats_api/clients/: composer_mcp.py
api/src/composer_stats_api/compat/: fastmcp_override.py
api/src/composer_stats_api/config/: cors.py
api/src/composer_stats_api/routers/: health.py  performance.py
api/src/composer_stats_api/services/: deviation_calc.py  performance_calc.py
web/: Dockerfile  jsconfig.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/.next/: trace
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/allocation/: route.ts
web/src/app/api/auth/csrf/: route.ts
web/src/app/api/auth/login/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/session/: route.ts
web/src/app/api/performance/: route.ts
web/src/app/api/portfolio-risk/: route.ts
web/src/app/api/portfolio/live-vs-backtest/: route.ts
web/src/app/api/risk-comparison/: route.ts
web/src/app/api/symphonies/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/components/: date-filters.tsx  drawdown-chart.tsx  kpi-card.tsx  performance-chart.tsx
web/src/components/ui/: calendar.tsx  popover.tsx
web/src/lib/: api-proxy.ts  csrf.ts  session.ts
(+1 files in other folders)
